--- a/model_Room_8.Rmd
+++ b/model_Room_8.Rmd
@@ -14,7 +14,7 @@ editor_options:
 
 ## Preliminares
 
-```{r}
+```{r warning=FALSE}
 library(tidyverse)
 library(magrittr)
 library(skimr)
@@ -51,7 +51,8 @@ data %>%
         )) %>% mutate(across(everything(),~as.character(.))) %>% 
         pivot_longer(everything(),
                      names_to = c("varible",".value"),
-                     names_sep = c("_\\.")) %>% view()
+                     names_sep = c("_\\.")) %>% 
+        print(n="all")
 
 
 #Convertir a factor
@@ -89,12 +90,12 @@ data %>%
 
 ```
 
-# EDA
+## EDA
 
-## EDA Univariado
+### EDA Univariado
 
 
-### Todas las variables
+#### Todas las variables
 ```{r}
 skim(data)
 ```
@@ -102,7 +103,7 @@ skim(data)
 
 ### Posibles outliers
 
-```{r}
+```{r warning=FALSE}
 data %>% 
   reframe( 
     tibble(
@@ -123,6 +124,7 @@ data %>%
         geom_density()+
         scale_y_continuous(labels = scales::number_format())
 ```
+
 Existe una diferencia importante en los registros de dinero cobrado a los clientes al considerar aquellos que tienen pareja. Al revisar el gráfico anterior, se evidencia que las personas que informaron tener pareja son las que presentan los cobros más altos. Esto se refleja en la distribución, donde se observa una densidad mayor para valores altos en comparación con las personas que declararon no tener pareja.
 
 ### Balanceo de datos
@@ -154,11 +156,11 @@ theme_bw()
 
 El porcentaje de clientes que abandonan el servicio de telecomunicaciones es aproximadamente 3 a 1 en el muestra de análisis. 
 
-# EDA Bivariado
+### EDA Bivariado
 
-### Room 2
+#### Room 2
 
-#### Genero vs Churn
+##### Genero vs Churn
 
 **Tabla**
 
@@ -182,9 +184,9 @@ El porcentaje de clientes que abandonan el servicio de telecomunicaciones es apr
 
 **Interpretacion**
 
-### Room 4
+#### Room 4
 
-#### SeniorCitizen vs Churn
+##### SeniorCitizen vs Churn
 
 **Tabla**
 
@@ -217,7 +219,7 @@ ggplot(valores_Sc, aes(x = SeniorCitizen, y = Porc_grupo, fill = Churn)) +
 
 De los adultos mayores el 41% abandonó el servicio, mientras que de los no adultos mayores apenas un 24% abandonó el servicio. Aparentemente, un adulto mayor tiene mayor probabilidad de abandonar el servicio. 
 
-#### MultipleLines vs Churn
+##### MultipleLines vs Churn
 
 **Tabla**
 
@@ -252,7 +254,7 @@ ggplot(valores_Ml, aes(x = MultipleLines, y = N, fill = Churn)) +
 Entre las categorías de MultipleLines no hay mayor diferencia, entre los que abandonan o no el servicio. Los porcentajes son muy parecidos. 
 
 
-#### TechSupport vs Churn
+##### TechSupport vs Churn
 
 ```{r}
 data %>%
@@ -284,7 +286,7 @@ ggplot(valores_Ts, aes(x = TechSupport, y = N, fill = Churn)) +
 Los que no cuentan con soporte técnico, el 41.68% abandona el servicio. Por otro lado, los que si cuentan con soporte apenas un 15.17% abandona el servicio y los que no tienen internet contratado solo un 7.40% abandona el servicio.
 
 
-#### PaymentMethod vs Churn
+##### PaymentMethod vs Churn
 
 ```{r}
 data %>%
@@ -416,7 +418,7 @@ El 13,32% de los indviduos analizados y que abandonaron el servicio no contaban 
 
 #### Eda Bivariado entre churn y Total Charges
 
-```{r}
+```{r warning=FALSE}
 
 data %>%  group_by(Churn) %>% 
   summarise(n = n(),
@@ -470,18 +472,18 @@ La distribución del gasto mensual de aquellos individuos que no salieron del pl
 
 
 
-## Matriz de Correlación
+### Matriz de Correlación
 
-```{r}
+```{r message=FALSE, warning=FALSE}
 #data %>%  select(-customerID) %>% GGally::ggpairs()
 data %>%  select_if(where(is.numeric)) %>% GGally::ggpairs()
 
 ```
 Según el gráfico anterior existe una alta correlación positiva entre las variables TotalChanges y tenure, con 0.826, seguida de la correlación entre las variables TotalChages y MonthyChanges, con una correlación moderada de 0.651.
 
-# Modelamiento - Random Forest
+##MODELAMIENTO
 
-**Train - Test Split**
+###Train - Test Split
 
 ```{r}
 #data %>% select(-customerID) -> data
@@ -498,22 +500,22 @@ strata = Churn # Estratificación del muestreo
 
 ```
 
-**data de entrenamiento**
+###Data de entrenamiento
 
 ```{r}
 train <- training(split)
 dim(train)
 ```
 
-**data de prueba**
+###Data de prueba (test)
 
 ```{r}
 test <- testing(split)
 dim(test)
 ```
-**Preprocesamiento**
+###Preprocesamiento
 
-***Receipe y Balanceo de datos***
+####Receipe y Balanceo de datos
 
 ```{r}
 receta <- train %>%
@@ -547,7 +549,7 @@ themis::step_upsample(Churn, over_ratio = 0.9, skip= TRUE, seed= 123)
 
 ```
 
-***Entrenamiento y ajuste de Hiperparámetro***
+####Entrenamiento y ajuste de Hiperparámetro
 
 ```{r}
 
@@ -558,7 +560,7 @@ cv
 
 ```
 
-***Métricas***
+###Métricas
 
 ```{r}
 metricas <- metric_set(accuracy, sens, spec, bal_accuracy)
@@ -566,8 +568,9 @@ metricas
 
 
 ```
+## Modelamiento - Random Forest
 
-***Especificacion del modelo***
+###Especificacion del modelo
 
 ```{r}
 rf_sp <-
@@ -578,7 +581,7 @@ rf_sp <-
 
 ```
 
-***Work Flow***
+###Work Flow
 
 ```{r}
 rf_wflow <-
@@ -589,7 +592,7 @@ rf_wflow <-
 
 
 ```
-***Afinamiento de Hiperpárametros***
+###Afinamiento de Hiperpárametros
 
 ```{r}
 set.seed(123)
@@ -604,14 +607,14 @@ grid_latin_hypercube(size = 10) #preguntar como se construye la malla
 
 ```
 
-**Paralelización**
+###Paralelización
 
 ```{r}
 #parallel::detectCores(logical=FALSE)
 
 ```
 
-**Entrenamiento de Malla de Busqueda en la Crossvalidation**
+###Entrenamiento de Malla de Busqueda en la Crossvalidation
 
 ```{r}
 set.seed(123)
@@ -625,6 +628,7 @@ control= control_grid(allow_par = T, save_pred = T) ## Paralel y Pred
 rf_tuned
 
 ```
+###Evaluación de modelos
 Evaluamos que modelo resulto mejor
 
 ```{r}
@@ -643,7 +647,7 @@ show_best(rf_tuned, metric = 'bal_accuracy', n = 10)
 
 Revisando los resultados de las métricas de evaluación del modelo y considerando que es de interés para le empresa contar con la mejor estimación de los individuos que realmente abandonan el servicio se selecciona como referencia los hiperpárametros del modelo número 6 que presenta los mejores resultados en sensibilidad, para ajustar el modelo final. 
 
-**Nueva Malla de Búsqueda**
+###Nueva Malla de Búsqueda
 
 ```{r}
 
@@ -659,7 +663,7 @@ rf_grid_2
 
 ```
 
-**Entrenamiento de Malla de Busqueda en la Crossvalidation**
+####Entrenamiento de Malla de Busqueda en la Crossvalidation
 
 ```{r}
 
@@ -692,7 +696,7 @@ show_best(rf_tuned_2, metric = 'spec', n = 10)
 ```{r}
 show_best(rf_tuned_2, metric = 'bal_accuracy', n = 10)
 ```
-**Modelo final**
+###Modelo final
 
 ```{r}
 ## Definir la mejor combinacion
@@ -703,6 +707,8 @@ rf_wflow %>%
   finalize_workflow(rf_pars_fin)
 rf_wflow_fin
 ```
+###Entrenamiento del modelo
+
 Entrenar el modelo final 
 
 ```{r}
@@ -711,13 +717,13 @@ rf_fitted
 
 
 ```
-Modelo sin workflow
+###Modelo sin workflow
 
 ```{r}
 rf_model_fin <- extract_fit_parsnip(rf_fitted)
 ```
 
-**Evaluación del Modelo**
+###Evaluación del Modelo
 
 Evaluación en la data de entrenamiento
 
@@ -730,7 +736,7 @@ conf_mat(truth = Real, estimate = .pred_class ) %>%
 summary
 
 ```
-Evaluación en la data de prueba
+###Evaluación en la data de prueba
 
 ```{r}
 test %>%
@@ -739,7 +745,7 @@ mutate(Real= test$Churn) %>%
   conf_mat(truth = Real, estimate = .pred_class ) %>%
 summary
 ```
-**¿Que variables pueden estar relacionadas más con el abandono de clientes?**
+###¿Que variables pueden estar relacionadas más con el abandono de clientes?
 ```{r}
 library(vip)
 rf_model_fin %>%
@@ -752,9 +758,9 @@ Como parte del ejercicio de selección del mejor modelo para la determinación d
 
 Para tal efecto, la aplicación del algoritmo XGboost inicia a partir de la receta establecida para los datos de abandono de clientes del servicio de telecomunicaciones. 
 
+###Especificación del modelo 
 
 ```{r}
-#Especificación del modelo 
 
 xgb_sp <- boost_tree(mtry = tune(), trees = tune(),
   loss_reduction = tune(), learn_rate= tune() ) %>%
@@ -768,7 +774,7 @@ xgb_sp %>%
 
 ```
 
-**Afinamiento de Malla de búsqueda**
+###Afinamiento de Malla de búsqueda
 
 Previo a establecer la malla de búsqueda el algoritmo requiere la data incorporada las funciones establecidas en la receta, por tal motivo se aplica prep y bake. Posteriormente, se obtiene la malla de búsqueda
 
@@ -788,7 +794,7 @@ xgb_grid
 
 ```
 
-***Work Flow***
+###Work Flow
 
 ```{r}
 
@@ -800,7 +806,7 @@ xgb_wflow <-
 xgb_wflow
 ```
 
-***Entrenamiento de Malla de Busqueda en la Crossvalidation  - Xgboost***
+###Entrenamiento de Malla de Busqueda en la Crossvalidation  - Xgboost
 
 ```{r}
 
@@ -819,7 +825,7 @@ xgb_tuned
 
 ```
 
-***Mejor modelo***
+###Mejor modelo
 
 Evaluamos que modelo resulto mejor
 
@@ -841,7 +847,7 @@ show_best(xgb_tuned, metric = 'spec', n = 10)
 ```{r}
 show_best(xgb_tuned, metric = 'bal_accuracy', n = 10)
 ```
-**Selección del modelo final***
+###Selección del modelo final
 
 La selección de los hipepáramestros es con base al mejor modelo de sensibilidad y "bal_accuracy", por tanto se el modelo final resulta ser el modelo 04, no se realizá un proceso búsqueda manual del mejor modelo debido a la amplitud de valores que puede tomar el learn_rate y la función de costo, así como la discrecionalidad de la amplitud de búsqueda. 
 
@@ -855,15 +861,14 @@ xgb_wflow_fin
 
 ```
 
-
-**Entrenar el modelo final**
+###Entrenar el modelo final
 
 ```{r}
 xgb_fitted <- fit(xgb_wflow_fin, train)
 xgb_fitted
 ```
 
-***Selección del modelo***
+###Selección del modelo
 
 ```{r}
 
@@ -871,7 +876,7 @@ xgb_model_fin <- pull_workflow_fit(xgb_fitted)
 xgb_model_fin
 
 ```
-**Evaluación del modelo en la data de entrenamiento y prueba**
+###Evaluación del modelo en la data de entrenamiento y prueba
 
 ```{r}
 train %>%
@@ -893,7 +898,7 @@ test %>%
   summary
 
 ```
-***Importancia de las variables en el modelo****
+###Importancia de las variables en el modelo
 
 ```{r}
 
@@ -903,9 +908,6 @@ vip(xgb_model_fin)
 
 Analizando la importancia de las variables en el modelo se verifica que el gasto mensual y total presentan una alta importancia en las variables sin embargo el gasto total es una combinación lineal del gasto mensual, por lo que se podría excluir del modelo una de las variabales para probar si incrementa su capacidad de predicción con respecto a sensibilidad y bal_accuracy. 
 
-***Conclusión***
+###Conclusión
 
 Del análisis realizado se evidencia que ambos modelos (Random Forest y Xgboost ) presentan muy buena estimación con relación a sensibilidad, es decir con la capacidad de predicción de los individuos que abandonan el servicio, no obstante Xgboost presenta un resultado superior en el test de prueba (0.74 > 0.72), por tanto el modelo seleccionado es Xgboost.  
-
-
-
